# Video_Translator_Tool

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
docs/: archictecture.md  architecture.md  installation.md
plans/: final_project_architecture_with_vad.md  video_translator_architecture.md
scripts/: download_models.py  install_env.sh
src/video_translator/: __init__.py  cli.py  config.py  pipeline.py
src/video_translator/models/: __init__.py  aligner.py  asr.py  tts.py
src/video_translator/processing/: __init__.py  audio.py  qa.py  subtitles.py  vad.py  video.py
tests/: __init__.py  test_audio_processor.py  test_config.py  test_pipeline_regions.py  test_pipeline_subtitles.py  test_qa.py  test_subtitles.py  test_vad.py
