[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translator"
version = "0.1.0"
description = "Video translation pipeline using Qwen3 models (ASR, TTS, ForcedAligner)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Video Translator Team"}
]
keywords = [
    "video",
    "translation",
    "tts",
    "asr",
    "speech-to-text",
    "text-to-speech",
    "qwen",
    "ai",
    "ffmpeg"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.51.0",
    "accelerate>=0.25.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "gradio>=4.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "huggingface-hub>=0.20.0",
    "qwen-asr>=0.1.0",
    "qwen-tts>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
flash-attn = [
    "flash-attn>=2.4.0",
]
translation = [
    "deep-translator>=1.9.0",
    "translate>=3.5.0",
]
all = [
    "video-translator[dev,flash-attn,translation]",
]

[project.scripts]
video-translator = "video_translator.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/video_translator"
Documentation = "https://github.com/yourusername/video_translator/blob/main/README.md"
Repository = "https://github.com/yourusername/video_translator"
Issues = "https://github.com/yourusername/video_translator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
video_translator = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
